videos & channels components

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ a {
   justify-content: flex-start;
   cursor: pointer;
   background: transparent;
+  color: white;
   outline: none;
   border: none;
 
